--- a/templates/correct_answers.html
+++ b/templates/correct_answers.html
@@ -3,20 +3,83 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Correct Answers</title>
+    <title>Document</title>
+    <style>
+      nav {
+        background-color: #333; /* Background color of the navigation bar */
+            color: #fff; /* Text color of the navigation links */
+            padding: 10px; /* Padding around the navigation links */
+            display: flex; /* Use flexbox for layout */
+            justify-content: flex-start; /* Space items evenly along the main axis */
+            align-items: center; /* Center items along the cross axis */
+        }
+        ul {
+            list-style-type: none; /* Remove bullet points from the list */
+            margin: 0; /* Remove default margin */
+            padding: 0; /* Remove default padding */
+        }
+           
+        li {
+            display: inline; /* Display list items horizontally */
+            margin-right: 30px; /* Add spacing between navigation links */
+        }
+        li.title {
+            font-family: Arial, sans-serif; /* Set the font family */
+            font-size: 25px; /* Set the font size */
+            font-weight: None; /* Set the font weight */         
+        }   
+        body {
+            margin: 0;
+        }               
+        li.back-to-home {
+            font-size: 16px;
+            position: relative;
+            top: -3px
+        }
+        li.logout  {
+                font-size: 16px;
+                position: relative;
+                top: -3px;
+                left: 1000px;
+        }
+        a {
+            color:#fff;
+            text-decoration: none;
+        }
+        div.content-section{
+            position: relative;
+            left: 20px;
+
+        }
+    </style>
 </head>
 <body>
-    <h2>Correct Answers</h2>
-    <ol>
-        {%for correct_answer in correct_answers%}
-        <li>{{correct_answer[0]['content']}}</li>
-        {%endfor%}
+    <nav>
+        <ul>
+      
+            <li class="title">ECEBix</li>
+            <li class="back-to-home"><a href = "{{url_for('home')}}">Home</a></li>
+            <li class="logout"><a href = "{{url_for('logout')}}">Logout</a></li>
+           
+        </ul>
+     
+
+    </nav>
+    <div class="content-section">
+        <h2>Answer Key</h2>
+            {%for correct_answer in correct_answers%}
+             <p>{{correct_answer[0]['question_no']}}. {{correct_answer[0]['content']}}</p>
+             {%endfor%}
+
+
+
+        <div>
+            <button type="button" onclick="window.location.href = '{{url_for('electronics')}}';">Restart the Test</button>    
+        </div>
+
+    </div>
+
+
     
-    </ol>
-<button type="button" onclick="window.location.href = '{{url_for('courses')}}';">Back to Home</button> 
-<div>
-<br>
-<button type="button" onclick="window.location.href = '{{url_for('electronics')}}';">Restart the Test</button>    
-</div>   
 </body>
 </html>
