--- a/templates/home.html
+++ b/templates/home.html
@@ -4,78 +4,109 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Home</title>
-        <style>  nav {
-            background-color: #333; /* Background color of the navigation bar */
+        <style> 
+        nav{
+             background-color: #333; /* Background color of the navigation bar */
             color: #fff; /* Text color of the navigation links */
             padding: 10px; /* Padding around the navigation links */
-            display: flex; /* Use flexbox for layout */
-            justify-content: flex-start; /* Space items evenly along the main axis */
-            align-items: center; /* Center items along the cross axis */
-        }
+            height: 60px; 
+           }
+
         ul {
             list-style-type: none; /* Remove bullet points from the list */
             margin: 0; /* Remove default margin */
             padding: 0; /* Remove default padding */
-        }
+           }
            
         li {
             display: inline; /* Display list items horizontally */
             margin-right: 20px; /* Add spacing between navigation links */
-        }
-        li.title-nav {
-                    font-family: Arial, sans-serif; /* Set the font family */
-                    font-size: 25px; /* Set the font size */
-                    font-weight: None; /* Set the font weight */         
-                    
-            }   
-            body {
+           }
+       
+        body {
                 margin: 0;
-            }
-           
-            li {
-                display: inline; /* Display list items horizontally */
-                margin-right: 20px; /* Add spacing between navigation links */
-         
-            }
-            li.electronics {
+             }
+        .menu li{
+            display: inline-block;
+            margin-left: 50px;
+            margin-top: 20px;
+
+        }
+        
+        li.title-nav {
+            font-family: Arial, sans-serif; /* Set the font family */
+            font-size: 25px; /* Set the font size */
+            font-weight: None; /* Set the font weight */
+        }
+    
+        li.electronics {
+            font-family: sans-serif;
+            font-size: 17px;
             position: relative;
+            top: -3px;
+            margin-left: 200px;
+        }
+        li.communications {
+            font-family: sans-serif;
+            font-size: 17px;
+            position: relative;
+            top: -3px;
+            margin-left: 10px;
+        }
+        li.geas {
+            font-family: sans-serif;
+            font-size: 17px;
+            position: relative;
+            margin-left: 10px;
             top: -3px;
         }
         li.math {
+            font-family: sans-serif;
+            font-size: 17px;
             position: relative;
             top: -3px;
-        }
-        li.geas {
-            position: relative;
-            top: -3px;
-        }
-        li.communications {
-            position: relative;
-            top: -3px;
-        }
+            margin-left: 10px;
+        } 
 
-            li.register {
-                margin-left: 660px; 
+        li.register {
+                margin-left: 470px; 
+                font-family: sans-serif;
+                font-size: 17px;
                 position: relative;
-                top: -3px
+                top: -3px;
             }
-            li.login {
+
+        li.login {
+               
+                font-family: sans-serif;
+                font-size: 17px;
                 position: relative;
-                top: -3px
+                margin-left: 10px;
+                top: -3px;
             }
           
             a {
                 color: #fff; /* Text color of the navigation links */
                 text-decoration: none; /* Remove underline from links */
-            }</style>
+            }
+        .logo {
+            position: absolute;
+            height: auto;
+            left: 0;
+            width: 170px;
+            margin-top: -17px;
+        }
+            
+            </style>
     
 </head>
 <body>
 
 
 <nav>
-        <ul>
-            <li class="title-nav">ECEBix</li>
+         
+        <ul class="menu">
+            <img src="static\electron_logo.png" alt="Example Image" class="logo">
             <li class="electronics"><a href = "{{url_for('electronics')}}">Electronics</a></li>
             <li class="communications"><a href = "{{url_for('electronics')}}">Communications</a></li>
             <li class="geas"><a href = "{{url_for('electronics')}}">GEAS</a></li>
