--- a/templates/register_quiz.html
+++ b/templates/register_quiz.html
@@ -33,10 +33,10 @@
             width: 38%; /* Adjust the width as needed */
             margin: 0 auto; /* Center the container horizontally */
             margin-top: 50px;
-            border: 1px solid #ccc; /* Add a border for the rectangle effect */
+            border: 1px solid #ffffff; /* Add a border for the rectangle effect */
             padding: 20px; /* Add padding for spacing inside the container */
             box-sizing: border-box; /* Include padding and border in the width */
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
         }
     h1.register-header{
         color: #124a83;
@@ -51,8 +51,34 @@
     display: flex; /* Use flexbox to arrange items horizontally */
     align-items: center; /* Center items vertically */
     }
-  
-    
+    fieldset.form-group{
+        width: 93%;
+    }
+    .content-section-2 {
+    display: flex;
+    flex-direction: row; /* Make the content stack vertically */
+    align-items: center; /* Center align items horizontally */
+    }
+    .signup-btn,
+    a.ml-2 {
+    display: inline-block; /* Display elements inline */
+    }
+    .signup-btn {
+    margin-left: 300px; /* Add some space between the button and the link */
+    }
+    a.ml-2{
+        margin-right: 79px;
+    }
+    .logo {
+            margin: 0 auto;
+            width: 210px;
+            height: 120px;
+            
+          
+        }
+    .border-bottom-mb-3{
+        font-size: 20px;
+    }
     </style>
     
 </head>
@@ -63,14 +89,13 @@
    
     <div class="content-section">
         <div class="image-heading-container">
-            <img src="static\logo.png" alt="Example Image" width="100" height="100">
-            <h1 class="register-header">Create an Account</h1>
+            <img src="static\logo.png" alt="Example Image" width="100" height="100" class="logo">
         </div>
         
         <form method="POST" action="">
             {{ form.hidden_tag() }}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-3">Signup Now</legend>
+                <legend class="border-bottom-mb-3">Create an account</legend>
                 <div class="form-group">
                     {{ form.username.label(class="form-control-label") }}
 
@@ -138,14 +163,13 @@
                 
             </fieldset>
             <br>
-            <div class="form-group">
-                {{ form.submit(class="btn btn-outline-info") }}
-            </div>
-            <br>
-            <div>
+            <div class="content-section-2">
                 <small class="text-muted">
                     <a class="ml-2" href="{{ url_for('login') }}">Already have an account? Click here to login</a>
                 </small>
+                {{ form.submit(class="btn btn-outline-info") }}
+            
+               
             </div>
         </form>
 
