--- a/templates/home.html
+++ b/templates/home.html
@@ -106,7 +106,7 @@
 <nav>
          
         <ul class="menu">
-            <img src="static\electron_logo.png" alt="Example Image" class="logo">
+            <img src="static\logo.png" alt="Example Image" class="logo">
             <li class="electronics"><a href = "{{url_for('electronics')}}">Electronics</a></li>
             <li class="communications"><a href = "{{url_for('electronics')}}">Communications</a></li>
             <li class="geas"><a href = "{{url_for('electronics')}}">GEAS</a></li>
