--- a/templates/register_quiz.html
+++ b/templates/register_quiz.html
@@ -97,6 +97,38 @@
             <fieldset class="form-group">
                 <legend class="border-bottom-mb-3">Create an account</legend>
                 <div class="form-group">
+                    {{ form.firstname.label(class="form-control-label") }}
+
+                    {% if form.firstname.errors %}
+                    {{ form.firstname(class="form-control form-control-lg is-invalid") }}
+                    <div class = "invalid-feedback">
+                        {%for error in form.firstname.errors %}
+                         <span> {{error}}</span>       
+                        {%endfor%}
+                    </div>
+                    {%else%}
+                        {{ form.firstname(class="form-control form-control-lg") }} 
+                    {%endif %}
+        
+                </div>
+                <br>
+                <div class="form-group">
+                    {{ form.lastname.label(class="form-control-label") }}
+
+                    {% if form.lastname.errors %}
+                    {{ form.lastname(class="form-control form-control-lg is-invalid") }}
+                    <div class = "invalid-feedback">
+                        {%for error in form.lastname.errors %}
+                         <span> {{error}}</span>       
+                        {%endfor%}
+                    </div>
+                    {%else%}
+                        {{ form.lastname(class="form-control form-control-lg") }} 
+                    {%endif %}
+        
+                </div>
+                <br>
+                <div class="form-group">
                     {{ form.username.label(class="form-control-label") }}
 
                     {% if form.username.errors %}
