Added a Change Password feature

--- a/templates/account.html
+++ b/templates/account.html
@@ -99,7 +99,7 @@
             display: none;
             background-color: rgb(255, 255, 255);
             position: absolute;
-            min-width: 110px;
+            min-width: 120px;
             box-shadow: 2px 2px 5px black
 
         }
@@ -165,7 +165,9 @@
             <button>Account &#9660;</button>
             <div class="content">
                 <a href="{{url_for('edit_information')}}">Edit Information</a>
+                <a href="{{url_for('edit_password')}}">Change Password</a>
                 <a href="{{url_for('logout')}}">Logout</a>
+                
             </div>
        </div>
         
