--- a/templates/edit_password.html
+++ b/templates/edit_password.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edit Infomration</title>
-    <style>
-        .main-section{
-            width: 37%; /* Adjust the width as needed */
+    <title>Edit Password</title>
+
+</head>
+<style>
+    .main-section{
+            width: 40%; /* Adjust the width as needed */
             margin: 0 auto; /* Center the container horizontally */
             margin-top: 50px;
             border: 1px solid #ffffff; /* Add a border for the rectangle effect */
@@ -15,40 +17,12 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
             background-color: #ffffff;
             display: block;
-          
-
-         
         }
         .main-section img {
             width: 210px;
             height: 120px;
             margin-bottom: -15px;
             margin-left: 110px;
-       }
-       .main-section h1 {
-            font-weight: normal;
-            margin-bottom: -20px;
-           
-       }
-       .main-section form {
-        margin-top: 20px;
-       }
-       .main-section .form-section{
-           display: block;
-           
-       
-       }
-       .main-section .form-section input{
-            margin-left: 20px;
-            width: 290px;
-       }
-       .main-section .form-section form .lastname_field {
-            margin-left: 22px;
-
-       }
-       .main-section .form-section form .email_field {
-            margin-left: 53px;
-
        }
        .main-section .button-container {
          display: flex;
@@ -61,35 +35,33 @@
        .main-section legend {
          font-size: 20px;
        }
-       
-      
-      
-      
-    </style>
-</head>
+       .main-section .form-section input{
+            margin-left: 20px;
+            width: 290px;
+       }
+       .main-section form {
+             margin-top: 15px;
+             margin-left: 2px;
+       }
+       .main-section input.old-password-field {
+            margin-left: 27px;
+
+       }
+</style>
 <body>
-    
     <div class="main-section">  
         <img src="static\logo.png" alt="Example Image"><br>
         <div class="form-section">
             <fieldset>
-                <legend>Update Information</legend>
-                <form action="{{url_for('edit_information')}}" method="post">
+                <legend>Change Password</legend>
+                <form action="{{url_for('edit_password')}}" method="post">
                   <div>
-                    <label for="firstname">First Name</label>
-                    <input type="text" id="firstname" name="firstname" required class="firstname_field">
+                    <label for="old_password">Old Password</label>
+                    <input type="password" id="old_password" name="old_password" required class="old-password-field">
                   </div><br>
                   <div>
-                    <label for="lastname">Last Name</label>
-                    <input type="text" id="lastname" name="lastname" required class="lastname_field">
-                  </div><br>
-                  <div>
-                    <label for="username">User Name</label>
-                    <input type="text" id="usernname" name="username" required class="username_field">
-                  </div><br>
-                  <div>
-                    <label for="email">Email</label>
-                    <input type="email" id="email" name="email" required class="email_field">
+                    <label for="new_password">New Password</label>
+                    <input type="password" id="new_password" name="new_password" required class="new-password-field">
                   </div><br>
                   <div class="button-container">
                     <button type="submit">Save</button>
@@ -100,9 +72,5 @@
         </div> 
        
     </div>
-
-
-
-
 </body>
 </html>
