Profile Information feature on the process

--- a/templates/edit_password.html
+++ b/templates/edit_password.html
@@ -8,7 +8,7 @@
 </head>
 <style>
     .main-section{
-            width: 40%; /* Adjust the width as needed */
+            width: 45%; /* Adjust the width as needed */
             margin: 0 auto; /* Center the container horizontally */
             margin-top: 50px;
             border: 1px solid #ffffff; /* Add a border for the rectangle effect */
@@ -22,12 +22,13 @@
             width: 210px;
             height: 120px;
             margin-bottom: -15px;
-            margin-left: 110px;
+            margin-left: 160px;
        }
        .main-section .button-container {
          display: flex;
          justify-content: flex-end;
          margin-right: 18px;
+         height: 25px;
        }
        .main-section .button-container .cancel-btn{
          margin-left: 10px;
@@ -37,7 +38,7 @@
        }
        .main-section .form-section input{
             margin-left: 20px;
-            width: 290px;
+            width: 335px;
        }
        .main-section form {
              margin-top: 15px;
@@ -47,16 +48,29 @@
             margin-left: 27px;
 
        }
+       .main-section input.new-password-field {
+            margin-left: 45px;
+
+       }
+       .main-section .button-container h5 {
+        margin-right: 75px; 
+        margin-top: 5px;
+        font-size: 15px;
+        color: red;
+        font-weight: normal;
+       }
 </style>
 <body>
     <div class="main-section">  
-        <img src="static\logo.png" alt="Example Image"><br>
+        <a href="{{url_for('home')}}">
+            <img src="static\logo.png" alt="Example Image"><br>
+        </a>
         <div class="form-section">
             <fieldset>
                 <legend>Change Password</legend>
                 <form action="{{url_for('edit_password')}}" method="post">
                   <div>
-                    <label for="old_password">Old Password</label>
+                    <label for="old_password">Current Password</label>
                     <input type="password" id="old_password" name="old_password" required class="old-password-field">
                   </div><br>
                   <div>
@@ -64,6 +78,11 @@
                     <input type="password" id="new_password" name="new_password" required class="new-password-field">
                   </div><br>
                   <div class="button-container">
+                    {% with messages = get_flashed_messages() %}
+                    {% if messages %}
+                         <h5 class="error-message">{{ messages[0] }}</h5>    
+                    {% endif %}
+                    {% endwith %}
                     <button type="submit">Save</button>
                     <button type="submit" onclick="window.location.href = '{{url_for('account')}}';" class="cancel-btn">Cancel</button>
                   </div>        
