--- a/templates/account.html
+++ b/templates/account.html
@@ -134,17 +134,57 @@
          
         }
         .user-section{
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            float: left;
+            display: block;    
+            position: relative;
             margin-left: 30px;
-            margin-top: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); 
+            width: 370px;
+            height: 400px;
+       
         }
-        .user-section .present_user{
-            margin-left: 20px;
+        
+        .user-section .user-header {
+            display: flex;
+            position: absolute;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); 
+            margin-top: -10px;
+            align-items: center;
+            width: 450px;
+            height: 200px;  
+
+        }
+        .user-section .edit-info{
+            position: absolute;
+            margin-top: 190px;
+            margin-left: 60px;     
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);  
+        }
+        .user-section button {
+            width: 250px;
+            height: 25px;
+            border: 1px solid #b8b8b8;
+            background-color: #e8e8e8;
+        }
+        .user-section .user-bio {
+            display: block;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); 
+            margin-left: 15px;  
+            width: 450px;
+            line-height: 13px;        
+        } 
+        .user-section .user-bio p.present_user{
             font-size: 20px;
             font-weight: bold;
+        } 
+        .user-section .user-bio p.username{
+            font-size: 17px;
+            margin-top: -12px;
+            margin-bottom: 25px;
+        }
+        .user-section .user-bio p.bio{
+            font-size: 14px;
+            font-weight: bold;
+            
         }
         </style>
       
@@ -152,7 +192,7 @@
 </head>
 <body>
 
-<nav>
+    <nav>
         <ul class="menu">
             <img src="static\logo.png" alt="Example Image" class="logo">
             <li class="electronics"><a href = "{{url_for('electronics')}}">Electronics</a></li>
@@ -166,8 +206,7 @@
             <div class="content">
                 <a href="{{url_for('edit_information')}}">Edit Information</a>
                 <a href="{{url_for('edit_password')}}">Change Password</a>
-                <a href="{{url_for('logout')}}">Logout</a>
-                
+                <a href="{{url_for('logout')}}">Logout</a>      
             </div>
        </div>
         
@@ -175,9 +214,17 @@
 
     <br>
     <div class="user-section">
-        <img src="{{image_file}}" alt="Example Image" class="user_profile_image">
-        <p class="present_user">{{present_user}}</p>
-       
+        <div class="user-header">
+                <img src="{{image_file}}" alt="Example Image" class="user_profile_image">
+                <div class="user-bio">
+                    <p class="present_user">{{present_user}}</p>
+                    <p class="username">@{{username}}</p>
+                    <p class="bio">Web Developer | Engineer</p>
+                </div>          
+         </div>
+         <div class="edit-info">
+            <button type="submit" onclick="window.location.href = '{{url_for('edit_information')}}';" class="cancel-btn">Edit Profile</button>
+         </div>
     </div>
     {% with messages = get_flashed_messages() %}
     {% if messages %}
