--- a/templates/register_quiz.html
+++ b/templates/register_quiz.html
@@ -69,12 +69,13 @@
     a.ml-2{
         margin-right: 79px;
     }
-    .logo {
+    .content-section img {
             margin: 0 auto;
             width: 210px;
             height: 120px;
-            
-          
+            margin-top: -15px;
+            margin-left: 105px; 
+            margin-bottom: -10px;
         }
     .border-bottom-mb-3{
         font-size: 20px;
@@ -90,7 +91,9 @@
    
     <div class="content-section">
         <div class="image-heading-container">
-            <img src="static\logo.png" alt="Example Image" width="100" height="100" class="logo">
+            <a href="{{url_for('home')}}">
+                 <img src="static\logo.png" alt="Example Image" width="100" height="100" class="logo">
+            </a>
         </div>
         
         <form method="POST" action="">
