--- a/templates/account.html
+++ b/templates/account.html
@@ -219,11 +219,8 @@
                 <div class="user-bio">
                     <p class="present_user">{{present_user}}</p>
                     <p class="username">@{{username}}</p>
-                    <p class="bio">Web Developer | Engineer</p>
+                    <p class="bio">{{bio}}</p>
                 </div>          
-         </div>
-         <div class="edit-info">
-            <button type="submit" onclick="window.location.href = '{{url_for('edit_information')}}';" class="cancel-btn">Edit Profile</button>
          </div>
     </div>
     {% with messages = get_flashed_messages() %}
