--- a/templates/edit_info.html
+++ b/templates/edit_info.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edit Infomration</title>
+    <title>Edit Information</title>
     <style>
         .main-section{
             width: 37%; /* Adjust the width as needed */
             margin: 0 auto; /* Center the container horizontally */
-            margin-top: 30px;
+            margin-top: 20px;
             border: 1px solid #ffffff; /* Add a border for the rectangle effect */
             padding: 15px; /* Add padding for spacing inside the container */
             box-sizing: border-box; /* Include padding and border in the width */
@@ -74,7 +74,7 @@
         <div class="form-section">
             <fieldset>
                 <legend>Update Information</legend>
-                <form action="{{url_for('edit_information')}}" method="post">
+                <form method="POST" action="" enctype="multipart/form-data">
                       {{ form.csrf_token }}
                   <div>
                       <span>{{form.firstname_update.label}} {{form.firstname_update}}</span>
@@ -108,8 +108,20 @@
               </div><br>
               <div>
                 <span>{{form.fb_username_update.label}} {{form.fb_username_update}}</span>
-                </div><br>
-                {{form.submit}}
+              </div><br>
+              <div>
+                  <span>{{form.bio.label}} {{form.bio}}</span>
+              </div><br>
+              <div>
+                    {{form.picture.label}}
+                    {{form.picture}}
+                    {% if form.picture.errors%}
+                        {% for error in form.picture.errors%}
+                     <span>{{error}}</span>
+                        {%endfor%}
+                    {%endif%}
+              </div><br>
+                  {{form.submit}}
                 </form>
             </fieldset>
         </div> 
