--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -50,7 +50,7 @@
         <div class="logo">
             <img src="static\logo.png" alt="Example Image" width="100" height="100" class="logo">
         </div>
-         <form method="POST" action="">
+         <form method="POST" action="" enctype="multipart/form-data">
             {{form.hidden_tag()}}
             <fieldset class="field-form">
                 <legend class="legend">Profile Details</legend>
@@ -72,8 +72,21 @@
                     <div class="form-group">
                         <span> {{form.facebook_username.label}} {{form.facebook_username}}</span>  
                     </div>
+                    <div class="form-group">
+                        <span> {{form.bio.label}} {{form.bio}}</span>  
+                    </div>
+                    <div>
+                        {{form.picture.label}}
+                        {{form.picture}}
+                        {% if form.picture.errors%}
+                            {% for error in form.picture.errors%}
+                         <span>{{error}}</span>
+                            {%endfor%}
+                        {%endif%}
+                    </div>
             </fieldset>
                  {{form.submit}}
+                 <button type="button" onclick="window.location.href = '{{url_for('register')}}';" class="correct-answer">Back</button>
          </form>
         
     </div>
