--- a/templates/comms_result.html
+++ b/templates/comms_result.html
@@ -133,6 +133,6 @@
     
     <br>
     <button type="button" onclick="window.location.href = '{{url_for('electronics')}}';" class="restart-test">Restart the Test</button>
-   <p> <button type="button" onclick="window.location.href = '{{url_for('answers')}}';" class="correct-answer">Correct Answers</button></p>
+   <p> <button type="button" onclick="window.location.href = '{{url_for('commsanswers')}}';" class="correct-answer">Correct Answers</button></p>
 </body>
 </html>
