--- a/templates/home.html
+++ b/templates/home.html
@@ -108,7 +108,7 @@
         <ul class="menu">
             <img src="static\logo.png" alt="Example Image" class="logo">
             <li class="electronics"><a href = "{{url_for('electronics')}}">Electronics</a></li>
-            <li class="communications"><a href = "{{url_for('electronics')}}">Communications</a></li>
+            <li class="communications"><a href = "{{url_for('communications')}}">Communications</a></li>
             <li class="geas"><a href = "{{url_for('electronics')}}">GEAS</a></li>
             <li class="math"><a href = "{{url_for('electronics')}}">Math</a></li>
             <li class="register"><a href = "{{url_for('register')}}">Register</a></li>
