--- a/templates/elecs_result.html
+++ b/templates/elecs_result.html
@@ -132,7 +132,7 @@
     
     
     <br>
-    <button type="button" onclick="window.location.href = '{{url_for('communications')}}';" class="restart-test">Restart the Test</button>
-   <p> <button type="button" onclick="window.location.href = '{{url_for('commsanswers')}}';" class="correct-answer">Correct Answers</button></p>
+    <button type="button" onclick="window.location.href = '{{url_for('electronics')}}';" class="restart-test">Restart the Test</button>
+   <p> <button type="button" onclick="window.location.href = '{{url_for('elecsanswers')}}';" class="correct-answer">Correct Answers</button></p>
 </body>
 </html>
