--- a/templates/account.html
+++ b/templates/account.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Home</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <style>  
          nav{
             background-color: #333; /* Background color of the navigation bar */
@@ -134,11 +135,14 @@
          
         }
         .user-section{
-            display: block;    
+            display: flex;
+            flex-direction: column;
+            /* justify-content: center; */
+            align-items: center;    
             position: relative;
             margin-left: 30px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); 
-            width: 370px;
+            width: 450px;
             height: 400px;
        
         }
@@ -146,7 +150,7 @@
         .user-section .user-header {
             display: flex;
             position: absolute;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); 
+            /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);  */
             margin-top: -10px;
             align-items: center;
             width: 450px;
@@ -167,9 +171,9 @@
         }
         .user-section .user-bio {
             display: block;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); 
+            /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);  */
             margin-left: 15px;  
-            width: 450px;
+            width: 350px;
             line-height: 13px;        
         } 
         .user-section .user-bio p.present_user{
@@ -186,36 +190,49 @@
             font-weight: bold;
             
         }
+        .user-section .social-media {
+            width: 100%;
+            height: 200px;
+            margin-top: 200px;
+        }
         .main-section {
             display: flex;
             justify-content: left;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); 
+            /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);  */
             width: 1200px;
             height: 800px;
         }
         .user_result {
-            display: block;
-            justify-content: center;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
             text-align: center;
             height: 100vh; /*100% of the viewport height */
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); 
-            width: 600px;
-            height: 400px;
+            width: 700px;
+            height: 500px;
             margin-left: 100px;
-
         }
 
         .user_result table {
         margin: 0 auto; /* Set left and right margins to auto */
-        width: 90%; /* Adjust the width as needed */
+        width: 100%; /* Adjust the width as needed */
        }
        
+      .user_result .course-dropdown {
+        position: absolute;
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-end;
+        /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);  */
+        width: 500px;
+        height: 50px;
+        margin-top: 450px;
+       }
        .user_result .dropdown-2 {
+            position: relative;
             display: inline-block;
-            margin-top: 250px;
-            margin-right: -400px;
-            /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); */
-            
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);    
        }
        .user_result .dropdown-2 a {
         display: block;
@@ -235,8 +252,29 @@
        .user_result .dropdown-2 a:hover {
         background-color: rgb(227, 227, 227);
        }
-        </style>
       
+       .social-media a {
+        color: black;
+      
+      }
+      .social-media p{
+        margin: 10px;
+        font-size: 15px;
+        font-family: Arial, sans-serif;
+      }
+      .social-media a:hover {
+        color: blue;
+        text-decoration: underline;
+      }
+      .email-symbol {
+        font-size: 20px; /* Adjust the font size to your preference */
+    }
+    .icon {
+    font-family: 'YourCustomIconFont', 'Font Awesome', sans-serif; /* Use your custom icon font or Font Awesome */
+    /* Additional CSS styles for the icon */
+}
+        </style>
+     
     
 </head>
 <body>
@@ -270,8 +308,19 @@
                     <p class="present_user">{{present_user}}</p>
                     <p class="username">@{{username}}</p>
                     <p class="bio">{{bio}}</p>
-                </div>          
+                </div>         
          </div>
+         <div class="social-media">
+            <p><span class="email-symbol">&#x2709;</span> {{email}}</p>
+            <p class="facebook-link">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
+                    <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951"/>
+                </svg>
+                <a href="{{facebook}}"> {{facebook}}</a>
+            </p>
+            <p>&#x1F4F7<a href="{{instagram}}"> {{instagram}}</a></p>
+        </div>
+        
     </div>
     {% with messages = get_flashed_messages() %}
     {% if messages %}
@@ -303,17 +352,19 @@
                 {%endfor%}
             </tbody>
            </table>
-       </div>
-       <form id="courseForm" action="" method="POST">
-       <div class="dropdown-2">
-            <button>Course &#9660;</button>
-            <div class="content-2">
-                <a href="#" onclick="document.getElementById('courseInput').value = 'Electronics'; document.getElementById('courseForm').submit();">Electronics</a>
-                <a href="#" onclick="document.getElementById('courseInput').value = 'Communications'; document.getElementById('courseForm').submit();">Communications</a>
-            </div> 
-       </div>
-       <input type="hidden" id="courseInput" name="course">
-       </form>
+      </div>
+      <div class="course-dropdown">
+        <form id="courseForm" action="" method="POST">
+            <div class="dropdown-2">
+                 <button>Course &#9660;</button>
+                 <div class="content-2">
+                     <a href="#" onclick="document.getElementById('courseInput').value = 'Electronics'; document.getElementById('courseForm').submit();">Electronics</a>
+                     <a href="#" onclick="document.getElementById('courseInput').value = 'Communications'; document.getElementById('courseForm').submit();">Communications</a>
+                 </div> 
+            </div>
+            <input type="hidden" id="courseInput" name="course">
+            </form>
+      </div>
     </div>
 
     
